--- a/20141211-job/test.html
+++ b/20141211-job/test.html
@@ -135,7 +135,7 @@ for the JavaScript code in this tag.
 <li><a href="#sec-7">7 我的求职经历</a></li>
 <li><a href="#sec-8">8 个人的经验与教训</a></li>
 <li><a href="#sec-9">9 以后的路</a></li>
-<li><a href="#sec-10">10 欢迎提问 <code>foomomobar</code></a></li>
+<li><a href="#sec-10">10 祝大家能够从事自己热爱的事业 <code>foomomobar</code></a></li>
 </ul>
 </div>
 </div>
@@ -245,26 +245,36 @@ for the JavaScript code in this tag.
 <ul>
 <li>c：精通，对于了解底层原理非常重要，k&amp;r
 </li>
-<li>java：了解，职位很多，很规范
-</li>
-<li>python：了解，简单，好用
-</li>
-<li>markdown：写文档
-</li>
 </ul>
 
 </li>
-<li>选修
+<li>强烈推荐
 <ul>
-<li>html、css
+<li>java：了解，职位很多，有助于养成好习惯
+</li>
+<li>python：了解，简单，提高生活品质
+</li>
+<li>markdown：写文档，妈妈再也不用担心我设置格式的问题啦
+</li>
+</ul>
+
+</li>
+<li>选修：有时间可以看看
+<ul>
+<li>shell：将 *nix 下的工作自动化
+</li>
+<li>HTML、CSS：写博客，做个小应用都会用到
+</li>
+<li>c++：大家都有基础，不过太难精通了
+</li>
+<li>haskell：函数式编程
 </li>
 </ul>
 
 </li>
 </ul>
 
-<p>给出必学的几种（c、java、python、markdown），建议大家深入一种，多学几种
-</p>
+
 </div>
 
 </div>
@@ -274,12 +284,38 @@ for the JavaScript code in this tag.
 <div class="outline-text-2" id="text-5">
 
 
-<p>
-必学：网络、*nix、数据库
-</p>
-<p>
-选学：结合自己已有的专业知识、大数据、分布式
-</p>
+<ul>
+<li>最好是能结合自己的背景知识
+</li>
+<li>必修
+<ul>
+<li>网络：TCP/IP、HTTP、七层模型、网站是如何工作的、编程实践（UNP）
+</li>
+<li>*nix：基本使用（鸟哥的 Linux 私房菜）、*nix 环境下的编程与概念（APUE）
+</li>
+<li>数据库：基本的 SQL（SQL 必知必会）
+</li>
+</ul>
+
+</li>
+<li>选修：了解些基本概念，锦上添花
+<ul>
+<li>操作系统
+</li>
+<li>数据挖掘
+</li>
+<li>分布式
+</li>
+<li>机器学习
+</li>
+<li>搜索算法
+</li>
+</ul>
+
+</li>
+</ul>
+
+
 </div>
 
 </div>
@@ -289,9 +325,34 @@ for the JavaScript code in this tag.
 <div class="outline-text-2" id="text-6">
 
 
-<p>
-必要性：了解商业环境下是怎么开发的
-</p>
+<ul>
+<li>实习
+<ul>
+<li>有实习是最好的
+</li>
+<li>了解真正的程序员是如何开发的：代码管理、应用部署
+</li>
+<li>能够转正的话，会减轻不少压力
+</li>
+<li>入行前最后确认，这条路到底是不是适合自己
+</li>
+</ul>
+
+</li>
+<li>开源项目
+<ul>
+<li>目的与实习类似，但并不是那么容易参与
+</li>
+<li>了解工程师文化
+</li>
+<li>有一定的可能性带来工作机会
+</li>
+</ul>
+
+</li>
+</ul>
+
+
 </div>
 
 </div>
@@ -299,6 +360,20 @@ for the JavaScript code in this tag.
 <div id="outline-container-7" class="outline-2">
 <h2 id="sec-7"><span class="section-number-2">7</span> 我的求职经历</h2>
 <div class="outline-text-2" id="text-7">
+
+
+<ul>
+<li>offer：阿里巴巴、中兴、豆瓣（实习）
+</li>
+<li>终面挂：网易游戏
+</li>
+<li>一面挂：Facebook、百度
+</li>
+<li>笔试挂：腾讯（霸笔）
+</li>
+<li>简历挂：腾讯、有道、迅雷
+</li>
+</ul>
 
 
 </div>
@@ -310,9 +385,20 @@ for the JavaScript code in this tag.
 <div class="outline-text-2" id="text-8">
 
 
-<p>
-深度第一
-</p>
+<ul>
+<li>深度比广度重要
+</li>
+<li>校招和考试一样，需要大量的时间准备
+</li>
+<li>各家的校招都差不多，笔经面经挺靠谱
+</li>
+<li>别灰心丧气，运气成分很大
+</li>
+<li>最好是能在正式校招之前解决战斗……
+</li>
+</ul>
+
+
 </div>
 
 </div>
@@ -322,12 +408,32 @@ for the JavaScript code in this tag.
 <div class="outline-text-2" id="text-9">
 
 
+<ul>
+<li>我们和北大青鸟有区别么？
+<ul>
+<li>大厨与切菜
+</li>
+<li>Be a hacker：Thompson &amp; Ritchie、RMS、Linus、Doug Cutting
+<ul>
+<li>自己动手改变世界
+</li>
+<li>不将就
+</li>
+</ul>
+
+</li>
+</ul>
+
+</li>
+</ul>
+
+
 </div>
 
 </div>
 
 <div id="outline-container-10" class="outline-2">
-<h2 id="sec-10"><span class="section-number-2">10</span> 欢迎提问 <code>foomomobar</code></h2>
+<h2 id="sec-10"><span class="section-number-2">10</span> 祝大家能够从事自己热爱的事业 <code>foomomobar</code></h2>
 <div class="outline-text-2" id="text-10">
 
 
